--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest # (3).OS환경
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' # 풀리퀘 머지이고, 브랜치가 main일 때 돌아라
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'dev' # 풀리퀘 머지이고, 브랜치가 main일 때 돌아라
 
     steps:
       - name: Checkout
