feat: CI/CD 마이프라인 구축
#16

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -44,19 +44,19 @@ jobs:
           mkdir -p deploy
           cp build/libs/*.jar deploy/application.jar
           cp Procfile deploy/Procfile
-          cp -r .ebextensions-dev deploy/.ebextensions
+          cp -r .ebextensions_dev deploy/.ebextensions
           cp -r .platform deploy/.platform
           cd deploy && zip -r deploy.zip .
 
-          - name: Beanstalk Deploy
-            uses: einaregilsson/beanstalk-deploy@v20
-            with:
-              aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
-              aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
-              application_name: breifing-dev
-              environment_name: Breifing-dev-env
-              version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
-              region: ap-northeast-1
-              deployment_package: deploy/deploy.zip
-              wait_for_deployment: false
+      - name: Beanstalk Deploy
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
+          application_name: umc-5th-workbook-dev
+          environment_name: Umc-5th-workbook-dev-env
+          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
+          region: ap-northeast-1
+          deployment_package: deploy/deploy.zip
+          wait_for_deployment: false
 
