--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -20,6 +20,15 @@ jobs:
           java-version: 11 # (5).자바 설치
           distribution: 'adopt' # 크게 신경 안쓰도 됨
 
+      - name: Set application.yml
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ./src/main/resources/application-dev.yml
+        env:
+          spring.datasource.url: ${{ secrets.AWS_RDS_URL }}
+          spring.datasource.username: ${{ secrets.AWS_RDS_USERNAME }}
+          spring.datasource.password: ${{ secrets.AWS_RDS_PASSWORD }}
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash # (6).권한 부여
