--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -34,6 +34,8 @@ http {
       listen        80 default_server;
       listen        [::]:80 default_server;
 
+      server_name dev.umc-5th-gana.shop
+
       location / {
           proxy_pass          http://springboot;
                   # CORS 관련 헤더 추가
