--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -34,7 +34,7 @@ http {
       listen        80 default_server;
       listen        [::]:80 default_server;
 
-      server_name dev.umc-5th-gana.shop
+      server_name dev.umc-5th-gana.shop;
 
       location / {
           proxy_pass          http://springboot;
